--- a/Assingment_2.ipynb
+++ b/Assingment_2.ipynb
@@ -5,7 +5,7 @@
    "id": "a4e232a4-0ea0-47e5-97bc-61e19df3fb9f",
    "metadata": {},
    "source": [
-    "# Assignment 1\n",
+    "# Assignment 2\n",
     "\n",
     "## Problem Statement Explanation:\n",
     "\n",
@@ -93,7 +93,7 @@
     "log_file_path = f\"./books_{capture_log_time.date()}_at_runtime_{capture_log_time.hour}:{capture_log_time.minute}.log\"\n",
     "logging.basicConfig(filename=log_file_path, level=logging.INFO, format='%(asctime)s - %(message)s')\n",
     "\n",
-    "logging.info(f\"INITIALIZING Assingment_2_script\")"
+    "logging.info(f\"INITIALIZING books script\")"
    ]
   },
   {
@@ -177,7 +177,7 @@
     "        elif unix:\n",
     "            return df.withColumn(col_name, F.date_format(F.from_unixtime(col_name), format_out))\n",
     "        else:\n",
-    "            raise(\"For unix=False, format_in is necessary\")"
+    "            raise Exception(\"For unix=False, format_in is necessary\")"
    ]
   },
   {
@@ -209,7 +209,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/12/25 05:00:42 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/12/25 20:46:19 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
@@ -474,7 +474,9 @@
     "\tpostgres:13\n",
     "```\n",
     "\n",
-    "Now you can run the below cell to insert data into the postgre table."
+    "Now you can run the below cell to insert data into the postgre table.\n",
+    "\n",
+    "> Note to update your username and password accordingly"
    ]
   },
   {
@@ -492,13 +494,16 @@
     }
    ],
    "source": [
+    "username = \"root\"\n",
+    "password = \"root\"\n",
+    "\n",
     "logging.info(f\"Inserting data into Postgre: {datetime.datetime.now()}\")\n",
     "review_df.write.jdbc(url=\"jdbc:postgresql://localhost:5432/books\",\n",
     "                     table=\"reviews_data\",\n",
     "                     mode=\"overwrite\", \n",
     "                     properties={\n",
-    "                         \"user\": \"root\",\n",
-    "                         \"password\": \"root\",\n",
+    "                         \"user\": username,\n",
+    "                         \"password\": password,\n",
     "                         \"driver\": \"org.postgresql.Driver\"\n",
     "                     })\n",
     "logging.info(f\"Insertion complete: {datetime.datetime.now()}\")"
@@ -531,14 +536,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+-------+--------------------+----------+--------------------+------------+----------+--------------+--------------+-----------+--------------+\n",
-      "|      asin|overall|          reviewText|reviewTime|          reviewerID|reviewerName|   summary|unixReviewTime|length_summary|total_votes|actual_helpful|\n",
-      "+----------+-------+--------------------+----------+--------------------+------------+----------+--------------+--------------+-----------+--------------+\n",
-      "|000100039X|    5.0|Spiritually and m...|12-16-2012|A10000012B7CGYKOM...|        Adam|Wonderful!|    12-16-2012|           129|          0|             0|\n",
-      "+----------+-------+--------------------+----------+--------------------+------------+----------+--------------+--------------+-----------+--------------+\n",
-      "only showing top 1 row\n",
-      "\n",
-      "None\n",
       "root\n",
       " |-- asin: string (nullable = true)\n",
       " |-- overall: double (nullable = true)\n",
@@ -557,7 +554,6 @@
    ],
    "source": [
     "review_df = review_df.withColumn(\"reviewText\", F.decode(F.col(\"reviewText\"), \"UTF-8\"))\n",
-    "print(review_df.show(1))\n",
     "review_df.printSchema()"
    ]
   },
