Add A_1 with better instructions

--- a/Assingment_1.ipynb
+++ b/Assingment_1.ipynb
@@ -17,6 +17,8 @@
     "- Find the item with the least rating\n",
     "- Find the item with the most rating\n",
     "- Find the item with the longest reviews\n",
+    "- Show date-time in MM-DD-YYYY\n",
+    "- A desired dataframe operation\n",
     "- Finally store it into a parquet file\n",
     "\n",
     "> **To download the dataset, please execute the below cell.<br>Please note that it will download to the current directory you are in and unzip it.**\n",
@@ -253,6 +255,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1675b915-9ce7-49a4-9f4e-606734b6c66f",
+   "metadata": {},
+   "source": [
+    "## Transform datetime to DD-MM-YYYY\n",
+    "\n",
+    "We have created a class method `transform_time` that handles both transformations from any format to datetime to any choosen format as well as unix datetime. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "801080a3-03cf-4fac-99ff-e6a43fb938ad",
@@ -297,7 +309,7 @@
    "id": "9ebb4d5f-b6b5-44a7-8894-550142c19852",
    "metadata": {},
    "source": [
-    "## Description of the columns\n",
+    "### Description of the columns\n",
     "\n",
     "`asin` - ID of the product, e.g. 0000013714<br>\n",
     "`helpful` - helpfulness rating of the review, e.g. 2/3<br>\n",
